# cocomanager

./: .gitignore  README.md  justfile  pyproject.toml
cocomanager/: __init__.py
cocomanager/core/: functions.py  parser.py
cocomanager/models/: parser_methods.py
cocomanager/models/coco/: __init__.py  coco_annotations.py  coco_categories.py  coco_images.py  coco_info.py  coco_license.py
cocomanager/utils/: logger.py  progressbar.py  rich_style.py
test/: README.md  conftest.py  test_concat.py  test_edit.py  test_misc.py  test_parse.py  test_write.py
test/test_concat/fixtures/annotations/: coco_diff_cat_name.json  coco_diff_cat_order.json
test/test_concat/results/annotations/: coco_diff_cat_name.json  coco_diff_cat_order.json
test/test_edit/fixtures/: match_categories_coco.json  remove_filter_coco.json  update_annotations_coco.json  updates.json
test/test_edit/results/: filter_anno_coco.json  filter_anno_drop_coco.json  filter_cat_coco.json  filter_cat_drop_coco.json  filter_img_coco.json  remove_anno_coco.json  remove_anno_drop_coco.json  remove_cat_coco.json  remove_cat_drop_coco.json  remove_img_coco.json  update_annotations_coco.json
test/test_misc/fixtures/: error_bbox.json
test/test_misc/results/: error_bbox_style.html
test/test_parse/annotations/: coco.json
test/test_parse/annotations/voc/: 0000000.xml  0000001.xml  0000002.xml  0000003.xml  0000004.xml
test/test_parse/results/: coco_annotations.csv  coco_categories.csv  voc_annotations.csv  voc_categories.csv  voc_images.csv  yolo_annotations.csv  yolo_categories.csv
(+18 files in other folders)
