[tool.poetry]
name = "cocomanager"
version = "2.0.0"
description = "Package to manage and edit COCO annotations"
authors = ["Leon Tham <leon_tham@bifrost.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.4"
tqdm = "^4.64.0"
pandas = "^2.1.0"
ujson = "^5.5.0"
matplotlib = "^3.5.2"
pydantic = "^2.11.7"
rich = "^13.4.2"
rich-click = "^1.6.1"
imagesize = "^1.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
isort = "^5.12.0"
mypy = "^1.10.0"
ruff = "^0.5.1"
jupyter = "^1.0.0"
pandas-stubs = "^2.3.0.250703"
types-pyyaml = "^6.0.12.20250516"
types-pillow = "^10.2.0.20240822"
types-tqdm = "^4.67.0.20250516"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "gitlab-pub"
url = "https://gitlab.com/api/v4/projects/41231688/packages/pypi"
priority = "explicit"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[[tool.mypy.overrides]]
module = ["ujson", "imagesize.*", "matplotlib.*"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
